fixing layout issues on calendar picker to make the component fit the width of it's container fix the placeholder text in the component to use the correct date format

--- a/src/app/modules/calendar/calendar.component.css
+++ b/src/app/modules/calendar/calendar.component.css
@@ -2,20 +2,20 @@
   box-sizing: border-box;
   border: 2px solid #212121;
   border-radius: 3px;
-  width: 186px;
+  width: 100%;
   height: 45px;
   padding: 12px 65px 11px 17px;
   font-family: Open Sans;
   font-size: 16px;
   line-height: 22px;
 }
-.date-toggle {
+
+.date-toggle-wrapper {
   position: relative;
-  right: 45px;
-  bottom: 2px;
 }
-.toSpan {
-    position: relative;
-    top: 40px;
-    right: 20px;
+
+.date-toggle {
+  position: absolute;
+  right: 10px;
+  bottom: 2px;
 }
